force-app/main/default/objects/NAICS_Code__c/NAICS_Code__c.object-meta.xml
<CustomObject>
    <description>WCA - 2012 North American Industry Classification System</description>
    <label>NAICS Code</label>
    <nameField>
        <label>NAICS Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NAICS Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>