force-app/main/default/objects/NAICS_Code__c/fields/Change_Note__c.field-meta.xml
<CustomField>
    <fullName>Change_Note__c</fullName>
    <label>Change Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>