force-app/main/default/objects/NAICS_Code__c/fields/NAICS_Title__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Title__c</fullName>
    <label>NAICS Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>