force-app/main/default/objects/NAICS_Code__c/fields/Structure_Order__c.field-meta.xml
<CustomField>
    <fullName>Structure_Order__c</fullName>
    <label>Structure Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>