force-app/main/default/objects/NAICS_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NAICS_Title__c</columns>
    <columns>Change_Note__c</columns>
    <columns>Level__c</columns>
    <columns>Structure_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>